Teich entfernt, Bewässerungsanlagen-Hinweis hinzugefügt

--- a/monate/oktober.html
+++ b/monate/oktober.html
@@ -23,7 +23,13 @@
                     <ul>
                         <li>Letzter Rasenschnitt</li>
                         <li>Laub regelmäßig entfernen</li>
-                        <li>Teich winterfest machen</li>
+                        <li>Bewässerungsanlage winterfest machen:
+                            <ul>
+                                <li>Alle Schläuche mit Wasseranschluss zusammenrollen und in den Schuppen bringen</li>
+                                <li>Sprühköpfe an der Bewässerung abdrehen und winterfest verpacken</li>
+                                <li>Sprühköpfe zu Jochen bringen - er lagert sie in einer Kiste in seinem Keller</li>
+                            </ul>
+                        </li>
                         <li>Wasserleitungen und -tonnen entleeren</li>
                     </ul>
 
