Wir haben kein Gewächshaus

--- a/monate/februar.html
+++ b/monate/februar.html
@@ -29,7 +29,7 @@
 
                     <h3>Gemüsegarten</h3>
                     <ul>
-                        <li>Erste Aussaaten unter Glas (Salat, Kohlrabi, Tomaten)</li>
+                        <li>Erste Aussaaten auf der Fensterbank (Salat, Kohlrabi, Tomaten)</li>
                         <li>Kartoffeln zum Vorkeimen auslegen</li>
                         <li>Hochbeete für die Bepflanzung vorbereiten</li>
                         <li>Restlichen Wintergemüse ernten</li>
