--- a/monate/maerz.html
+++ b/monate/maerz.html
@@ -32,7 +32,7 @@
                         <li>Erste Freilandaussaaten (Möhren, Erbsen, Spinat)</li>
                         <li>Frühkartoffeln legen</li>
                         <li>Zwiebeln und Knoblauch stecken</li>
-                        <li>Tomaten, Paprika und Auberginen unter Glas vorziehen</li>
+                        <li>Tomaten, Paprika und Auberginen auf der Fensterbank vorziehen</li>
                         <li>Kräuter aussäen</li>
                     </ul>
 
