--- a/monate/april.html
+++ b/monate/april.html
@@ -25,7 +25,6 @@
                         <li>Rasenkanten stechen</li>
                         <li>Mulch ausbringen</li>
                         <li>Unkraut jäten</li>
-                        <li>Regelmäßig lüften im Gewächshaus</li>
                     </ul>
 
                     <h3>Gemüsegarten</h3>
@@ -33,7 +32,7 @@
                         <li>Direktsaat von Möhren, Radieschen, Salat</li>
                         <li>Kohlrabi, Blumenkohl und Brokkoli auspflanzen</li>
                         <li>Kartoffeln legen</li>
-                        <li>Gurken und Zucchini unter Glas vorziehen</li>
+                        <li>Gurken und Zucchini auf der Fensterbank vorziehen</li>
                         <li>Kräuter aussäen und pflanzen</li>
                         <li>Spargel ernten (ab Mitte April)</li>
                     </ul>
