Hinweise zu Topfpflanzen

--- a/monate/april.html
+++ b/monate/april.html
@@ -25,6 +25,9 @@
                         <li>Rasenkanten stechen</li>
                         <li>Mulch ausbringen</li>
                         <li>Unkraut jäten</li>
+                        <li>Restliche Topfpflanzen aus den Hausdurchgängen nach draußen bringen</li>
+                        <li>Topfpflanzen im Innenhof, Hinterhof und an den Hauseingängen platzieren</li>
+                        <li>Beschädigte Töpfe ersetzen und Pflanzen bei Bedarf umtopfen</li>
                     </ul>
 
                     <h3>Gemüsegarten</h3>
