--- a/monate/dezember.html
+++ b/monate/dezember.html
@@ -54,9 +54,9 @@
 
                     <h3>Wichtige Hinweise</h3>
                     <ul>
-                        <li>Regelmäßige Vogelfütterung</li>
-                        <li>Winterquartiere kontrollieren</li>
-                        <li>Keine Arbeiten bei gefrorenem Boden</li>
+                        <li>Winterschutz regelmäßig kontrollieren</li>
+                        <li>Bei Frost: Wasserleitungen und Wasserhähne absperren</li>
+                        <li>Regelmäßige Kontrolle und sparsames Gießen der Topfpflanzen in den Hausdurchgängen</li>
                     </ul>
                 </div>
             </div>
