--- a/monate/februar.html
+++ b/monate/februar.html
@@ -54,8 +54,8 @@
                     <h3>Wichtige Hinweise</h3>
                     <ul>
                         <li>Auf Spätfrost achten</li>
-                        <li>Jungpflanzen nicht zu früh ins Freie setzen</li>
-                        <li>Bei Tauwetter den Garten nicht betreten</li>
+                        <li>Kein Schnitt bei Frost</li>
+                        <li>Regelmäßige Kontrolle und sparsames Gießen der Topfpflanzen in den Hausdurchgängen</li>
                     </ul>
                 </div>
             </div>
