--- a/monate/januar.html
+++ b/monate/januar.html
@@ -51,7 +51,7 @@
                     <ul>
                         <li>Nur bei frostfreiem Wetter arbeiten</li>
                         <li>Schnee vorsichtig von Ästen und Sträuchern entfernen</li>
-                        <li>Vögel füttern</li>
+                        <li>Regelmäßige Kontrolle und sparsames Gießen der Topfpflanzen in den Hausdurchgängen</li>
                     </ul>
                 </div>
             </div>
