--- a/monate/maerz.html
+++ b/monate/maerz.html
@@ -25,6 +25,8 @@
                         <li>Rasenflächen von Laub befreien und vertikutieren</li>
                         <li>Wege und Terrassen reinigen</li>
                         <li>Bewässerungssysteme überprüfen und aktivieren</li>
+                        <li>Überwinterte Topfpflanzen aus den Hausdurchgängen kontrollieren und vorbereiten</li>
+                        <li>Bei stabiler Witterung: Erste robuste Topfpflanzen nach draußen stellen</li>
                     </ul>
 
                     <h3>Gemüsegarten</h3>
