--- a/monate/november.html
+++ b/monate/november.html
@@ -25,6 +25,9 @@
                         <li>Gartengeräte einwintern</li>
                         <li>Wege und Terrassen reinigen</li>
                         <li>Kompost abdecken</li>
+                        <li>Topfpflanzen aus dem Garten (Innenhof, Hinterhof) und von den Hauseingängen einsammeln</li>
+                        <li>Topfpflanzen in die Hausdurchgänge zur Überwinterung bringen</li>
+                        <li>Regelmäßige Kontrolle und Bewässerung der eingelagerten Topfpflanzen sicherstellen</li>
                     </ul>
 
                     <h3>Gemüsegarten</h3>
@@ -56,7 +59,6 @@
                     <ul>
                         <li>Frostschutz kontrollieren</li>
                         <li>Regelmäßige Kontrolle der eingelagerten Ernte</li>
-                        <li>Vogelfütterung beginnen</li>
                         <li>Gartenmöbel einlagern</li>
                     </ul>
                 </div>
