Hinweis auf Genossenschaft

--- a/monate/april.html
+++ b/monate/april.html
@@ -19,6 +19,11 @@
                 <div class="col-12">
                     <h2>Gartenarbeiten im April</h2>
                     
+                    <div class="alert alert-warning">
+                        <strong>Wichtiger Hinweis:</strong> Der Garten ist Eigentum der Genossenschaft. Nur die Beete sind zur freien Nutzung freigegeben. 
+                        Für alle anderen Arbeiten (z.B. Schneiden von Bäumen und Sträuchern) muss vorab die Erlaubnis der Genossenschaft eingeholt werden.
+                    </div>
+
                     <h3>Allgemeine Aufgaben</h3>
                     <ul>
                         <li>Rasen mähen (erster Schnitt)</li>
