--- a/monate/januar.html
+++ b/monate/januar.html
@@ -26,37 +26,10 @@
 
                     <h3>Allgemeine Aufgaben</h3>
                     <ul>
-                        <li>Werkzeuge warten und reinigen</li>
-                        <li>Gartenplanung für das kommende Jahr erstellen</li>
-                        <li>Saatgut bestellen und sortieren</li>
-                        <li>Bei frostfreiem Wetter: Gehölze schneiden</li>
-                    </ul>
-
-                    <h3>Gemüsegarten</h3>
-                    <ul>
-                        <li>Gemüsebeete unter Vlies oder Folie vor Frost schützen</li>
-                        <li>Wintergemüse wie Grünkohl und Rosenkohl ernten</li>
-                    </ul>
-
-                    <h3>Obstgarten</h3>
-                    <ul>
-                        <li>Obstbäume bei frostfreiem Wetter schneiden</li>
-                        <li>Stammschäden ausbessern</li>
-                        <li>Leimringe an Obstbäumen kontrollieren</li>
-                    </ul>
-
-                    <h3>Ziergarten</h3>
-                    <ul>
-                        <li>Winterschutz kontrollieren</li>
-                        <li>Zimmerpflanzen sparsam gießen</li>
-                        <li>Christrosen und Winterjasmin pflegen</li>
-                    </ul>
-
-                    <h3>Wichtige Hinweise</h3>
-                    <ul>
-                        <li>Nur bei frostfreiem Wetter arbeiten</li>
-                        <li>Schnee vorsichtig von Ästen und Sträuchern entfernen</li>
-                        <li>Regelmäßige Kontrolle und sparsames Gießen der Topfpflanzen in den Hausdurchgängen</li>
+                        <li>Möglich: Werkzeuge warten und reinigen</li>
+                        <li>Möglich: Schnee vorsichtig von Ästen und Sträuchern entfernen</li>
+                        <li>Bitte: Regelmäßige Kontrolle und sparsames Gießen der Topfpflanzen in den Hausdurchgängen</li>
+                        <li><strong>Im Januar ruht unser Garten. Also nichts machen. Die einzigen erlaubten Gartentätigkeiten sind welche, die die Genossenschaft machen darf.</strong></li>
                     </ul>
                 </div>
             </div>
