--- a/monate/maerz.html
+++ b/monate/maerz.html
@@ -15,6 +15,10 @@
 
     <div class="container">
         <div class="content">
+            <div class="alert alert-info text-center">
+                <h4 class="alert-heading">Ankündigung!</h4>
+                <p class="mb-0">Wir planen einen Gartenaktionstag im März</p>
+            </div>
             <div class="row">
                 <div class="col-12">
                     <h2>Gartenarbeiten im März</h2>
