Regelvorschlag für Beetvergabe

--- a/monate/maerz.html
+++ b/monate/maerz.html
@@ -19,6 +19,13 @@
                 <h4 class="alert-heading">Ankündigung!</h4>
                 <p class="mb-0">Wir planen einen Gartenaktionstag im März</p>
             </div>
+
+            <div class="alert alert-success text-center">
+                <h4 class="alert-heading">Beetvergabe 2025</h4>
+                <p>Im März beginnt die neue Gartensaison! Interessierte können jetzt ein Beet übernehmen.</p>
+                <a href="../beetvergabe.html" class="btn btn-success">Mehr Informationen zur Beetvergabe</a>
+            </div>
+
             <div class="row">
                 <div class="col-12">
                     <h2>Gartenarbeiten im März</h2>
