--- a/beetvergabe.html
+++ b/beetvergabe.html
@@ -15,6 +15,7 @@
             <ul>
                 <li>Mitmieter können beim SAUS ein Stück Beet kostenfrei anmieten</li>
                 <li>Als "Hauptkümmerer" übernimmst du die Verantwortung für ein Jahr und kannst deine Wunschpflanzen anbauen</li>
+                <li>Ein Schild oder Stein mit dem Namen des Hauptkümmerers muss im Beet platziert werden, damit alle wissen, wer dafür verantwortlich ist</li>
                 <li>Du bist hauptverantwortlich für:
                     <ul>
                         <li>Gießen</li>
@@ -34,7 +35,7 @@
                         <li>Urlaubsvertretungen</li>
                     </ul>
                 </li>
-                <li>Hauptkümmerer werden automatisch Mitglied der Gärtner-Gruppe (WhatsApp oder Signal):
+                <li>Hauptkümmerer werden Mitglied der Gärtner-Gruppe (WhatsApp oder Signal):
                     <ul>
                         <li>Für einfache Erreichbarkeit</li>
                         <li>Koordination von Urlaubsvertretungen</li>
@@ -55,6 +56,18 @@
                     <ul>
                         <li>Gute Pflege erhöht die Chancen auf erneute Beetvergabe</li>
                         <li>Vernachlässigung kann die Neuvergabe im Folgejahr erschweren</li>
+                    </ul>
+                </li>
+            </ul>
+
+            <h2>Laufzeit und Verlängerung</h2>
+            <ul>
+                <li>Die Beetzuweisung gilt für ein Jahr</li>
+                <li>Nach Ablauf des Jahres:
+                    <ul>
+                        <li>Die Zuweisung erlischt automatisch</li>
+                        <li>Eine Verlängerung muss neu beantragt werden</li>
+                        <li>Der Antrag kann formlos erfolgen, solange keine Konflikte vorliegen, wird vermutlich einfach bewilligt</li>
                     </ul>
                 </li>
             </ul>
