Februar ist aktualisiert

--- a/monate/februar.html
+++ b/monate/februar.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header text-center">
         <h1>Februar</h1>
-        <p class="lead">Vorbereitungen für den Frühling</p>
+        <p class="lead">Winterarbeiten und Planung</p>
     </div>
 
     <div class="container">
@@ -26,41 +26,10 @@
 
                     <h3>Allgemeine Aufgaben</h3>
                     <ul>
-                        <li>Kompost umsetzen</li>
-                        <li>Frühbeetkästen vorbereiten</li>
-                        <li>Gartengeräte für die neue Saison überprüfen</li>
-                        <li>Bodenproben entnehmen und analysieren lassen</li>
-                    </ul>
-
-                    <h3>Gemüsegarten</h3>
-                    <ul>
-                        <li>Erste Aussaaten auf der Fensterbank (Salat, Kohlrabi, Tomaten)</li>
-                        <li>Kartoffeln zum Vorkeimen auslegen</li>
-                        <li>Hochbeete für die Bepflanzung vorbereiten</li>
-                        <li>Restlichen Wintergemüse ernten</li>
-                    </ul>
-
-                    <h3>Obstgarten</h3>
-                    <ul>
-                        <li>Obstbaumschnitt fortsetzen</li>
-                        <li>Beerensträucher schneiden</li>
-                        <li>Neue Obstbäume und Beerensträucher pflanzen</li>
-                        <li>Spalierbäume an der Hauswand beschneiden</li>
-                    </ul>
-
-                    <h3>Ziergarten</h3>
-                    <ul>
-                        <li>Rückschnitt von Stauden und Gräsern</li>
-                        <li>Frühlingsblüher wie Krokusse und Schneeglöckchen beobachten</li>
-                        <li>Sommerblumen unter Glas vorziehen</li>
-                        <li>Rosen zurückschneiden (Ende Februar)</li>
-                    </ul>
-
-                    <h3>Wichtige Hinweise</h3>
-                    <ul>
-                        <li>Auf Spätfrost achten</li>
-                        <li>Kein Schnitt bei Frost</li>
-                        <li>Regelmäßige Kontrolle und sparsames Gießen der Topfpflanzen in den Hausdurchgängen</li>
+                        <li>Möglich: Werkzeuge warten und reinigen</li>
+                        <li>Möglich: Schnee vorsichtig von Ästen und Sträuchern entfernen</li>
+                        <li>Bitte: Regelmäßige Kontrolle und sparsames Gießen der Topfpflanzen in den Hausdurchgängen</li>
+                        <li><strong>Im Februar ruht unser Garten. Also nichts machen. Die einzigen erlaubten Gartentätigkeiten sind welche, die die Genossenschaft machen darf.</strong></li>
                     </ul>
                 </div>
             </div>
