Heißt jetzt sicki-Gartenkalender

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gartenkalender</title>
+    <title>Sicki-Gartenkalender</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <div class="header text-center">
-        <h1>Gartenkalender</h1>
-        <p class="lead">Monatliche Tipps und Aufgaben für Ihren Garten</p>
+        <h1>Sicki-Gartenkalender</h1>
     </div>
 
     <div class="container">
