--- a/monate/januar.html
+++ b/monate/januar.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header text-center">
         <h1>Januar</h1>
-        <p class="lead">Winterarbeiten und Planung</p>
+        <p class="lead">Winterruhe - Der Garten schläft</p>
     </div>
 
     <div class="container">
