Überarbeitung März/April

--- a/index.html
+++ b/index.html
@@ -44,20 +44,11 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="month-card card not-updated">
+                <div class="month-card card">
                     <div class="card-body">
-                        <h5 class="card-title">März</h5>
-                        <p class="card-text">Start in die Gartensaison</p>
-                        <a href="monate/maerz.html" class="btn btn-success">Zum März</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="month-card card not-updated">
-                    <div class="card-body">
-                        <h5 class="card-title">April</h5>
-                        <p class="card-text">Frühlingsblüte und erste Aussaat</p>
-                        <a href="monate/april.html" class="btn btn-success">Zum April</a>
+                        <h5 class="card-title">März & April</h5>
+                        <p class="card-text">Start in die Gartensaison und Frühlingsblüte</p>
+                        <a href="monate/maerz.html" class="btn btn-success">Zu März & April</a>
                     </div>
                 </div>
             </div>
