--- a/beetvergabe.html
+++ b/beetvergabe.html
@@ -4,99 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beetvergabe - Sicki-Gartenkalender</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div class="header text-center">
         <h1>Beetvergabe im SAUS Garten</h1>
+        <p class="lead">Einfache Regeln für unseren Gemeinschaftsgarten</p>
+    </div>
 
+    <div class="container">
         <div class="content">
-            <h2>Grundsätze der Beetvergabe</h2>
-            <ul>
-                <li>Mitmieter können beim SAUS ein Stück Beet kostenfrei anmieten</li>
-                <li>Als "Hauptkümmerer" übernimmst du die Verantwortung für ein Jahr und kannst deine Wunschpflanzen anbauen</li>
-                <li>Ein Schild oder Stein mit dem Namen des Hauptkümmerers muss im Beet platziert werden, damit alle wissen, wer dafür verantwortlich ist</li>
-                <li>Du bist hauptverantwortlich für:
-                    <ul>
-                        <li>Gießen</li>
-                        <li>Unkrautentfernung</li>
-                        <li>Allgemeine Beetpflege</li>
-                    </ul>
-                </li>
-                <li>Die anderen Sicki-Gärtner respektieren diese Hauptverantwortlichkeit</li>
-            </ul>
+            <div class="alert alert-info text-center mb-4">
+                <h4 class="alert-heading">Mach mit im Sicki-Garten 2025!</h4>
+                <p class="mb-0">Du hast Lust auf ein eigenes Gartenbeet? Bei uns gilt: Einfach machen und Spaß haben!</p>
+            </div>
 
-            <h2>Gruppenbildung und Organisation</h2>
-            <ul>
-                <li>Mieter können kleine Gruppen bilden (z.B. 4 Personen teilen sich ein Beet)</li>
-                <li>Gegenseitige Absprachen für:
-                    <ul>
-                        <li>Gießdienste</li>
-                        <li>Urlaubsvertretungen</li>
-                    </ul>
-                </li>
-                <li>Hauptkümmerer werden Mitglied der Gärtner-Gruppe (WhatsApp oder Signal):
-                    <ul>
-                        <li>Für einfache Erreichbarkeit</li>
-                        <li>Koordination von Urlaubsvertretungen</li>
-                        <li>Allgemeiner Austausch und Absprachen</li>
-                    </ul>
-                </li>
-            </ul>
+            <div class="row">
+                <div class="col-12">
+                    <div class="card mb-4">
+                        <div class="card-header bg-success text-white">
+                            <h2 class="mb-0">Grundsätzliches zur Beetnutzung</h2>
+                        </div>
+                        <div class="card-body">
+                            <p>Da sich nicht viele für die Beete interessieren, kann eigentlich jeder machen, was er oder sie will. Der SAUS möchte nur dann Regeln aufstellen, wenn diese dringend nötig sind.</p>
+                            
+                            <p>Hier die wichtigsten Punkte:</p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Mitmieter können beim SAUS ein Stück Beet kostenfrei nutzen</li>
+                                <li class="list-group-item">Markiere dein Beet mit einem Schild oder beschrifteten Stein, damit alle wissen, wer sich darum kümmert</li>
+                                <li class="list-group-item">Pflege und gieße dein Beet regelmäßig</li>
+                                <li class="list-group-item">Wenn für andere nicht mehr erkennbar ist, dass sich jemand um ein Beet kümmert (ungepflegt, nicht gegossen, keine Markierung), darf es von anderen übernommen werden</li>
+                            </ul>
+                        </div>
+                    </div>
 
-            <h2>Verantwortung und Konsequenzen</h2>
-            <ul>
-                <li>Bei mangelnder Beetpflege:
-                    <ul>
-                        <li>Die Gartengruppe/der SAUS wird das Gespräch suchen</li>
-                        <li>Beete können jederzeit zurückgegeben werden</li>
-                    </ul>
-                </li>
-                <li>Die Pflege des Beetes im aktuellen Jahr hat Einfluss auf zukünftige Vergaben:
-                    <ul>
-                        <li>Gute Pflege erhöht die Chancen auf erneute Beetvergabe</li>
-                        <li>Vernachlässigung kann die Neuvergabe im Folgejahr erschweren</li>
-                    </ul>
-                </li>
-            </ul>
+                    <div class="card mb-4">
+                        <div class="card-header bg-success text-white">
+                            <h2 class="mb-0">Zusammenarbeit im Garten</h2>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Mitglieder der Gartengruppe sprechen sich untereinander ab</li>
+                                <li class="list-group-item">Es können sich gerne mehrere Personen ein Beet teilen</li>
+                                <li class="list-group-item">Gegenseitige Hilfe beim Gießen (besonders während Urlaubszeiten) ist erwünscht</li>
+                                <li class="list-group-item">Tritt gerne der Gärtner-Gruppe auf WhatsApp oder Signal bei, um einfacher kommunizieren zu können</li>
+                            </ul>
+                        </div>
+                    </div>
 
-            <h2>Laufzeit und Verlängerung</h2>
-            <ul>
-                <li>Die Beetzuweisung gilt für ein Jahr</li>
-                <li>Nach Ablauf des Jahres:
-                    <ul>
-                        <li>Die Zuweisung erlischt automatisch</li>
-                        <li>Eine Verlängerung muss neu beantragt werden</li>
-                        <li>Der Antrag kann formlos erfolgen, solange keine Konflikte vorliegen, wird vermutlich einfach bewilligt</li>
-                    </ul>
-                </li>
-            </ul>
+                    <div class="card mb-4">
+                        <div class="card-header bg-success text-white">
+                            <h2 class="mb-0">Nutzung und Ernte</h2>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Das Beet bleibt Teil des Gemeinschaftsgartens</li>
+                                <li class="list-group-item">Du darfst entscheiden, was du anpflanzen möchtest</li>
+                                <li class="list-group-item">Bei Ernte durch andere: Das ist grundsätzlich okay</li>
+                                <li class="list-group-item">Optional: Wenn du nicht möchtest, dass andere ernten, kannst du ein "Bitte nicht ernten"-Schild aufstellen</li>
+                            </ul>
+                        </div>
+                    </div>
 
-            <h2>Gemeinschaftsaspekt</h2>
-            <ul>
-                <li>Das Beet bleibt Teil des Gemeinschaftsgartens</li>
-                <li>Bei Ernte durch andere: Das ist grundsätzlich okay</li>
-                <li>Optional: "Finger weg"-Schild möglich, aber keine Strafverfolgung bei Missachtung</li>
-                <li>Der Hauptkümmerer hat üblicherweise die Haupthoheit über Verteilungsregeln der Ernte</li>
-            </ul>
-
-            <h2>Finanzierung</h2>
-            <ul>
-                <li>Begrenzte Gemeinschaftsliquidität (2025: 50 EUR für den Gesamtgarten)</li>
-                <li>Vorherige Absprache über mögliche SAUS-Beteiligung erforderlich</li>
-                <li>Eigeninitiative erwünscht:
-                    <ul>
-                        <li>Kostengünstige Bepflanzungsmethoden nutzen</li>
-                        <li>Eigene Investitionen möglich</li>
-                    </ul>
-                </li>
-            </ul>
-
-            <div class="notice">
-                <h3>Wichtiger Hinweis</h3>
-                <p>Diese Regeln sind vorläufig und noch nicht vom SAUS beschlossen. Sie können sich jährlich ändern, basierend auf den gesammelten Erfahrungen und zum Wohle des Gemeinschaftsgartens.</p>
+                    <div class="alert alert-warning mb-4">
+                        <h3 class="alert-heading">Erfahrungen aus der Vergangenheit</h3>
+                        <p>Wir haben oft erlebt, dass Nachbarn zunächst ein Beet haben wollten, sich dann aber nicht mehr darum gekümmert haben. Daher die Bitte: Übernimm nur ein Beet, wenn du auch wirklich Zeit und Lust hast, dich darum zu kümmern.</p>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <div class="navigation d-flex justify-content-between my-4">
+            <a href="index.html" class="btn btn-primary">Zurück zur Übersicht</a>
+        </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
