--- a/monate/maerz.html
+++ b/monate/maerz.html
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sicki-Gartenkalender - März</title>
+    <title>Sicki-Gartenkalender - März & April</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../styles.css" rel="stylesheet">
 </head>
 <body>
     <div class="header text-center">
-        <h1>März</h1>
-        <p class="lead">Start in die Gartensaison</p>
+        <h1>März & April</h1>
+        <p class="lead">Start in die Gartensaison und Frühlingsblüte</p>
     </div>
 
     <div class="container">
         <div class="content">
             <div class="alert alert-info text-center">
-                <h4 class="alert-heading">Ankündigung!</h4>
-                <p class="mb-0">Wir planen einen Gartenaktionstag im März</p>
+                <h4 class="alert-heading">Wichtige Aufgaben im Frühjahr!</h4>
+                <p class="mb-0">In diesen Monaten ist es wichtig, auf frostfreie Nächte zu warten, denn:</p>
+                <ul class="text-start mt-2 mb-0">
+                    <li>Das Außenwasser kann ohne Gefährdung des Gebäudes angestellt werden</li>
+                    <li>Pflanzen laufen nicht Gefahr, über Nacht zu erfrieren</li>
+                </ul>
             </div>
 
             <div class="alert alert-success text-center">
@@ -28,56 +32,95 @@
 
             <div class="row">
                 <div class="col-12">
-                    <h2>Gartenarbeiten im März</h2>
+                    <h2>Gartenarbeiten im März und April</h2>
                     
                     <div class="alert alert-warning">
                         <strong>Wichtiger Hinweis:</strong> Der Garten ist Eigentum der Genossenschaft. Nur die Beete sind zur freien Nutzung freigegeben. 
                         Für alle anderen Arbeiten (z.B. Schneiden von Bäumen und Sträuchern) muss vorab die Erlaubnis der Genossenschaft eingeholt werden.
                     </div>
 
+                    <h3>Spezielle Aufgaben für die Frühjahrszeit</h3>
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h4 class="card-title">Nach frostfreien Nächten</h4>
+                            <ul>
+                                <li><strong>SAUS-Aufgabe:</strong> Beim Hausmeister die Anstellung der Außenwasserhähne anfordern</li>
+                                <li>Organisation eines Gartentages mit allen Garteninteressierten:</li>
+                                <ul>
+                                    <li>Gemeinsame Übersicht über den Garten schaffen</li>
+                                    <li>Inventur vom Schuppen durchführen</li>
+                                    <li>Entscheiden, welche Erde und Werkzeuge erneuert werden müssen</li>
+                                    <li>Vorhandene Bewässerungsanlagen in Betrieb nehmen</li>
+                                </ul>
+                                <li>Kompostarbeiten prüfen:</li>
+                                <ul>
+                                    <li>3-Jahres-Rotationssystem durchführen</li>
+                                    <li>Vorvorjahreskompost sieben</li>
+                                    <li>Vorjahreskompost auf Vorvorjahreskompost-Platz schaufeln</li>
+                                    <li>Kompost auf Vorjahreskompost-Platz umlagern</li>
+                                </ul>
+                                <li>Prüfen, ob Genossenschaftsgärtner Pflanzenreste im Garten abgelegt haben und diese entsprechend entsorgen</li>
+                            </ul>
+                        </div>
+                    </div>
+
                     <h3>Allgemeine Aufgaben</h3>
                     <ul>
                         <li>Beete umgraben und Kompost einarbeiten</li>
                         <li>Rasenflächen von Laub befreien und vertikutieren</li>
+                        <li>Rasen mähen (erster Schnitt im April)</li>
+                        <li>Rasenkanten stechen</li>
                         <li>Wege und Terrassen reinigen</li>
                         <li>Bewässerungssysteme überprüfen und aktivieren</li>
-                        <li>Überwinterte Topfpflanzen aus den Hausdurchgängen kontrollieren und vorbereiten</li>
-                        <li>Bei stabiler Witterung: Erste robuste Topfpflanzen nach draußen stellen</li>
+                        <li>Überwinterte Topfpflanzen aus den Hausdurchgängen kontrollieren und nach draußen bringen</li>
+                        <li>Bei stabiler Witterung: Topfpflanzen im Innenhof, Hinterhof und an den Hauseingängen platzieren</li>
+                        <li>Beschädigte Töpfe ersetzen und Pflanzen bei Bedarf umtopfen</li>
+                        <li>Mulch ausbringen</li>
+                        <li>Unkraut jäten</li>
                     </ul>
 
                     <h3>Gemüsegarten</h3>
                     <ul>
-                        <li>Erste Freilandaussaaten (Möhren, Erbsen, Spinat)</li>
-                        <li>Frühkartoffeln legen</li>
+                        <li>Erste Freilandaussaaten (Möhren, Erbsen, Spinat, Radieschen, Salat)</li>
+                        <li>Frühkartoffeln legen (März) und weitere Kartoffeln im April</li>
                         <li>Zwiebeln und Knoblauch stecken</li>
                         <li>Tomaten, Paprika und Auberginen auf der Fensterbank vorziehen</li>
-                        <li>Kräuter aussäen</li>
+                        <li>Gurken und Zucchini auf der Fensterbank vorziehen (April)</li>
+                        <li>Kräuter aussäen und pflanzen</li>
+                        <li>Kohlrabi, Blumenkohl und Brokkoli auspflanzen (April)</li>
+                        <li>Spargel ernten (ab Mitte April)</li>
                     </ul>
 
                     <h3>Obstgarten</h3>
                     <ul>
-                        <li>Letzter Termin für Obstbaumschnitt</li>
-                        <li>Himbeeren und Brombeeren zurückschneiden</li>
-                        <li>Erdbeerbeete vorbereiten</li>
+                        <li>Letzter Termin für Obstbaumschnitt (März)</li>
+                        <li>Himbeeren und Brombeeren zurückschneiden und anbinden</li>
+                        <li>Erdbeerbeete vorbereiten und mulchen</li>
                         <li>Obstbäume düngen</li>
-                        <li>Neue Obstgehölze pflanzen</li>
+                        <li>Neue Obstgehölze und Beerensträucher pflanzen</li>
+                        <li>Obstbäume auf Schädlingsbefall kontrollieren</li>
                     </ul>
 
                     <h3>Ziergarten</h3>
                     <ul>
-                        <li>Frühjahrsblüher pflegen</li>
+                        <li>Frühjahrsblüher pflegen und nach der Blüte zurückschneiden</li>
                         <li>Stauden teilen und neu pflanzen</li>
-                        <li>Sommerblumen aussäen</li>
+                        <li>Sommerblumen aussäen (drinnen und draußen)</li>
                         <li>Rosen endgültig zurückschneiden</li>
                         <li>Frühjahrsblühende Gehölze nach der Blüte schneiden</li>
+                        <li>Dahlien und Gladiolen pflanzen (April)</li>
+                        <li>Kletterpflanzen anbinden</li>
+                        <li>Balkonkästen bepflanzen (April)</li>
                     </ul>
 
                     <h3>Wichtige Hinweise</h3>
                     <ul>
-                        <li>Auf Nachtfrost achten</li>
+                        <li>Auf Nacht- und Spätfrost achten</li>
                         <li>Jungpflanzen abhärten</li>
-                        <li>Bei Trockenheit bewässern</li>
+                        <li>Bei Trockenheit ausreichend bewässern</li>
                         <li>Schädlinge frühzeitig bekämpfen</li>
+                        <li>Schneckenkontrolle beginnen (April)</li>
+                        <li>Nützlinge fördern (Insektenhotels aufstellen)</li>
                     </ul>
                 </div>
             </div>
@@ -87,7 +130,7 @@
             <a href="../index.html" class="btn btn-primary">Zurück zur Übersicht</a>
             <div>
                 <a href="februar.html" class="btn btn-secondary">← Februar</a>
-                <a href="april.html" class="btn btn-secondary">April →</a>
+                <a href="mai.html" class="btn btn-secondary">Mai →</a>
             </div>
         </div>
     </div>
