--- a/monate/maerz.html
+++ b/monate/maerz.html
@@ -64,6 +64,11 @@
                         </div>
                     </div>
 
+                    <h3>Wichtige Hinweise</h3>
+                    <div class="alert alert-info">
+                        <strong>Kärchern nach der Lindenblüte:</strong> Lindenblüte ist Anfang bis Mitte Juni, danach klebt der Innenhof unter den Füßen. Das ist der optimale Zeitpunkt, um den Hof zu kärchern und so wieder nachhaltig aufzubereiten. Bitte alle Versuche der Genossenschaft abwehren, vorher zu kärchern und immer auf dieses Datum verweisen.
+                    </div>
+
                     <h3>Allgemeine Aufgaben</h3>
                     <ul>
                         <li>Beete umgraben und Kompost einarbeiten</li>
